Text with 'whitespace:nowrap' no longer uses special Win32-only text measurement code becasue it didn't work. b=42832  r=waterson